refactor: 迁移至AgentScope框架，重构整体代码结构
- 移除旧的LangChain4j依赖和相关业务代码
- 新增AgentScope Spring Boot Starter依赖，适配官方框架
- 重构配置系统为统一的PlatformProperties格式
- 新增RAG、内存管理、HTTP工具等内置工具实现
- 注册ModelScope模型工厂并预配置内置模型
- 实现基于JsonSession的会话持久化
- 更新API文档和项目描述信息
- 简化工具系统，使用AgentScope标准Tool注解